[package]
name = "axxd"
version = "0.1.0"
authors = ["multicatch <cezaryre@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/multicatch/axxd"
repository = "https://github.com/multicatch/axxd"
documentation = "https://multicatch.github.io/axxd/axxd/index.html"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

rust-crypto = "^0.2"
flate2 = "1.0"
encoding_rs = "0.8.28"

num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
